# BlockSp

./: CMakeLists.txt  INSTALL  LICENSE  README.md  blocksp_containers.hpp  blocksp_deflated_restart.hpp  blocksp_dense_multiply.hpp  blocksp_dense_solvers.hpp  blocksp_eigen_compare.hpp  blocksp_include.hpp  blocksp_lapack.hpp  blocksp_multiply.hpp  blocksp_preconditioners.hpp  blocksp_solvers.hpp  blocksp_tests.hpp  blocksp_utility.hpp  main.cpp
test_mats/: LDG_2D_vecLap.mtx  LDG_2D_vecLap_b.mtx  LDG_2D_vecLap_sol.mtx
